--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "cross-env APP_TYPE=site umi dev",
-    "build": "umi build",
+    "build": "umi build"
   },
   "dependencies": {
     "@antv/data-set": "^0.9.6",
