--- a/nginx/windows/conf/nginx.conf
+++ b/nginx/windows/conf/nginx.conf
@@ -20,14 +20,18 @@ http {
         listen 80;
 
 		
+		location / {
+			proxy_pass      http://127.0.0.1:8001/;
+		}
+		
 		#前端项目端口8000
-		location /frontend {
-			proxy_pass      http://127.0.0.1:8000/;
+		location /frontend/ {
+			proxy_pass      http://127.0.0.1:8001/;
 		}
 		
 		
 		#后端项目端口7001
-		location /backend {
+		location /backend/ {
 			proxy_pass      http://127.0.0.1:7001/;
 		}
 
