--- a/backend/run/application_config.json
+++ b/backend/run/application_config.json
@@ -87,26 +87,26 @@
     "onerror": {
       "errorPageUrl": "",
       "appErrorFilter": null,
-      "templatePath": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
+      "templatePath": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-onerror/lib/onerror_page.mustache"
     },
     "i18n": {
       "defaultLocale": "en_US",
       "dirs": [
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-session\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-security\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-jsonp\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-onerror\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-i18n\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-watcher\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-schedule\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-multipart\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-development\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-logrotator\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-static\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-view\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-sequelize\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\locales",
-        "D:\\VSCode\\zhaohui_wiki\\backend\\config\\locales"
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-session/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-security/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-jsonp/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-onerror/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-i18n/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-watcher/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-schedule/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-multipart/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-development/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-logrotator/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-static/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-view/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-sequelize/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/locales",
+        "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/config/locales"
       ],
       "queryField": "locale",
       "cookieField": "locale",
@@ -116,14 +116,14 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-watcher/lib/event-sources/default",
+        "development": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-watcher/lib/event-sources/development"
       }
     },
     "customLogger": {
       "scheduleLogger": {
         "consoleLevel": "NONE",
-        "file": "D:\\VSCode\\zhaohui_wiki\\backend\\logs\\sequelize-example\\egg-schedule.log"
+        "file": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/logs/sequelize-example/egg-schedule.log"
       }
     },
     "multipart": {
@@ -137,7 +137,7 @@
       "files": 10,
       "fileExtensions": [],
       "whitelist": null,
-      "tmpdir": "D:\\MyConfiguration\\hui.zhao\\AppData\\Local\\Temp\\egg-multipart-tmp\\sequelize-example",
+      "tmpdir": "/var/folders/66/dxjzfqxx0xjb9c21qdh81h3m0000gn/T/egg-multipart-tmp/sequelize-example",
       "cleanSchedule": {
         "cron": "0 30 4 * * *"
       }
@@ -160,7 +160,7 @@
     },
     "static": {
       "prefix": "/public/",
-      "dir": "D:\\VSCode\\zhaohui_wiki\\backend\\app\\public",
+      "dir": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/app/public",
       "dynamic": true,
       "preload": false,
       "buffer": false,
@@ -168,7 +168,7 @@
       "files": "<LRU>"
     },
     "view": {
-      "root": "D:\\VSCode\\zhaohui_wiki\\backend\\app\\view",
+      "root": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/app/view",
       "cache": false,
       "defaultExtension": ".html",
       "defaultViewEngine": "",
@@ -177,10 +177,10 @@
     "sequelize": {
       "dialect": "mysql",
       "database": "test",
-      "host": "10.100.41.207",
-      "port": 3425,
-      "username": "tcdsfservstatV2",
-      "password": "<String len: 24>"
+      "host": "47.99.76.20",
+      "port": 3306,
+      "username": "root",
+      "password": "<String len: 6>"
     },
     "env": "local",
     "name": "sequelize-example",
@@ -212,7 +212,7 @@
       },
       "scripts": {
         "dev": "egg-bin dev",
-        "test": "NODE_ENV=test npm run sequelize -- db:migrate && egg-bin test",
+        "test": "NODE_ENV=test egg-bin test",
         "cov": "egg-bin cov",
         "ci": "npm run cov",
         "autod": "autod",
@@ -222,9 +222,9 @@
       "author": "Qi Yu <njuyuqi@gmail.coom>",
       "license": "MIT"
     },
-    "baseDir": "D:\\VSCode\\zhaohui_wiki\\backend",
-    "HOME": "D:\\MyConfiguration\\hui.zhao",
-    "rundir": "D:\\VSCode\\zhaohui_wiki\\backend\\run",
+    "baseDir": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend",
+    "HOME": "/Users/hui.zhao",
+    "rundir": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -255,7 +255,7 @@
       "returnRawBody": true
     },
     "logger": {
-      "dir": "D:\\VSCode\\zhaohui_wiki\\backend\\logs\\sequelize-example",
+      "dir": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/logs/sequelize-example",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -346,8 +346,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-session",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-session",
       "version": "3.1.0"
     },
     "security": {
@@ -359,8 +359,8 @@
         "session"
       ],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-security",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-security",
       "version": "2.4.0"
     },
     "jsonp": {
@@ -372,8 +372,8 @@
         "security"
       ],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-jsonp",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-jsonp",
       "version": "2.0.0"
     },
     "onerror": {
@@ -385,8 +385,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-onerror",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-onerror",
       "version": "2.1.0"
     },
     "i18n": {
@@ -396,8 +396,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-i18n",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-i18n",
       "version": "2.0.0"
     },
     "watcher": {
@@ -407,8 +407,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-watcher",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-watcher",
       "version": "3.1.0"
     },
     "schedule": {
@@ -418,8 +418,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-schedule",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-schedule",
       "version": "3.4.0"
     },
     "multipart": {
@@ -431,8 +431,8 @@
         "schedule"
       ],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-multipart",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-multipart",
       "version": "2.2.1"
     },
     "development": {
@@ -446,8 +446,8 @@
       "env": [
         "local"
       ],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-development",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-development",
       "version": "2.4.1"
     },
     "logrotator": {
@@ -459,8 +459,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-logrotator",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-logrotator",
       "version": "3.0.3"
     },
     "static": {
@@ -470,8 +470,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-static",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-static",
       "version": "2.1.1"
     },
     "view": {
@@ -481,8 +481,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-view",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-view",
       "version": "2.1.0"
     },
     "sequelize": {
@@ -492,8 +492,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\VSCode\\zhaohui_wiki\\backend\\config\\plugin.js",
-      "path": "D:\\VSCode\\zhaohui_wiki\\backend\\node_modules\\egg-sequelize",
+      "from": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/config/plugin.js",
+      "path": "/Users/hui.zhao/workspace/VSCODE/zhaohui_wiki/backend/node_modules/egg-sequelize",
       "version": "4.1.0"
     }
   }
