--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "egg": "^2.10.0",
     "egg-sequelize": "^4.0.1",
-    "mysql2": "^1.6.1"
+    "mysql2": "^1.6.1",
+    "egg-jwt": "^3.0.0",
+    "egg-shell-decorators": "^1.0.4"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -14,13 +16,14 @@
     "egg-mock": "^3.19.2",
     "factory-girl": "^5.0.2",
     "lodash": "^4.17.10",
+    "egg-cors": "^2.1.0",
     "sequelize-cli": "^4.0.0"
   },
   "engines": {
     "node": ">=8.9.0"
   },
   "scripts": {
-    "dev": "egg-bin dev",
+    "dev": "egg-bin dev --port 7001",
     "test": "NODE_ENV=test egg-bin test",
     "cov": "egg-bin cov",
     "ci": "npm run cov",
