--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.5.1",
     "react-fittext": "^1.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.3.1",
     "swiper": "^4.4.1"
   },
   "devDependencies": {
